refactor(llecoop): #383 set email header visibility styling for screen sizes
ISSUES CLOSED: #383

--- a/apps/llecoop/src/styles/_theme.scss
+++ b/apps/llecoop/src/styles/_theme.scss
@@ -63,5 +63,8 @@
 
     /* Form */
     --mat-form-field-container-text-line-height: 2.4;
+
+    /* Header */
+    --mat-toolbar-title-text-size: var(--h4);
   }
 }
