--- a/libs/core/cms-layout/ui/footer/src/lib/core-cms-layout-ui-footer.component.html
+++ b/libs/core/cms-layout/ui/footer/src/lib/core-cms-layout-ui-footer.component.html
@@ -1,5 +1,3 @@
-<footer class="text-white p-sm bg-primary">
-  <div class="text-center justify-self-center">
-    <ng-content select="[content]"></ng-content>
-  </div>
+<footer class="flex justify-center text-center text-white align-middle p-sub bg-primary">
+  <ng-content select="[content]"></ng-content>
 </footer>
