--- a/libs/core/cms-layout/ui/sidenav/src/lib/core-cms-layout-ui-sidenav/core-cms-layout-ui-sidenav.component.html
+++ b/libs/core/cms-layout/ui/sidenav/src/lib/core-cms-layout-ui-sidenav/core-cms-layout-ui-sidenav.component.html
@@ -8,7 +8,7 @@
     [opened]="sidenavOpened"
     (keydown.escape)="onToggleSidenav(false)">
     <ng-content select="[header]"></ng-content>
-    <mat-divider></mat-divider>
+    <mat-divider class="mt-sm"></mat-divider>
     <ng-content select="[menu-items]"></ng-content>
     <mat-divider></mat-divider>
     <ng-content select="[footer]"></ng-content>
