--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex flex-col gap-sm flex-wrap items-center justify-center md:flex-row md:justify-between">
+  class="flex flex-col flex-wrap items-center justify-center gap-sm md:flex-row md:justify-between">
   <h2 class="flex items-center content-center h4 gap-sub">
     <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ facade.viewConfig().icon }}</mat-icon>
     <span>{{ facade.viewConfig().title | titlecase }}</span>
@@ -10,7 +10,7 @@
 </div>
 
 <plastik-shared-form-feature
-  class="block w-full lg:w-1/2"
+  class="block w-full lg:w-10/12 xxl:w-1/2"
   [fields]="facade.formStructure() || []"
   [model]="facade.model?.() || {}"
   (changeEvent)="onSubmit($event)">
