--- a/libs/shared/confirm/data-access/src/lib/shared-confirm-feature.component.html
+++ b/libs/shared/confirm/data-access/src/lib/shared-confirm-feature.component.html
@@ -1,8 +1,6 @@
 <div>
   <h4 mat-dialog-title>{{ data.title }}</h4>
-  <div mat-dialog-content>
-    <p>{{ data.message }}</p>
-  </div>
+  <div mat-dialog-content [innerHTML]="data.message"></div>
   <mat-dialog-actions align="end">
     <button type="button" mat-flat-button color="primary" mat-dialog-close>
       {{ data.ko }}
