--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -6,8 +6,8 @@
 <div
   class="flex flex-col flex-wrap items-center justify-center gap-sm md:flex-row md:justify-between">
   <h2 class="flex items-center content-center h4 gap-sub">
-    <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ viewConfig.icon }}</mat-icon>
-    <span>{{ viewConfig.title | titlecase }}</span>
+    <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ viewConfig?.icon }}</mat-icon>
+    <span>{{ viewConfig?.title | titlecase }}</span>
   </h2>
 
   @if (viewExtraActions.length) {
