--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -58,5 +58,6 @@
   [actions]="tableStructure.actions || {}"
   [extraRowStyles]="tableStructure.extraRowStyles"
   (changeSorting)="onChangeSorting($event)"
+  (getData)="onGetData($event)"
   (delete)="onDelete($event)">
 </plastik-shared-table>
