--- a/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility/input-password-with-visibility-type.component.html
+++ b/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility/input-password-with-visibility-type.component.html
@@ -3,9 +3,9 @@
   class="w-[90%]"
   [type]="hiddenPass() ? 'password' : 'text'"
   [formControl]="formControl"
-  [required]="to.required || false"
-  [maxLength]="to.maxLength"
-  [minLength]="to.minLength"
+  [required]="props.required || false"
+  [maxLength]="props.maxLength"
+  [minLength]="props.minLength"
   [autocomplete]="to['autocomplete']" />
 <button
   mat-icon-button
