--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -1,17 +1,53 @@
+@let viewConfig = facade.viewConfig();
+@let viewExtraActions = facade.viewExtraActions?.() || [];
+
 <div
   class="flex flex-col flex-wrap items-center justify-center gap-sm md:flex-row md:justify-between">
   <h2 class="flex items-center content-center h4 gap-sub">
-    <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ facade.viewConfig().icon }}</mat-icon>
-    <span>{{ facade.viewConfig().title | titlecase }}</span>
+    <mat-icon class="text-[40px] h-[40px] w-[40px]">{{ viewConfig.icon }}</mat-icon>
+    <span>{{ viewConfig.title | titlecase }}</span>
   </h2>
-  <button type="button" mat-flat-button color="accent" class="text-white" [routerLink]="['../']">
-    <mat-icon>arrow_back</mat-icon> Tornar al llistat
-  </button>
+
+  @if (viewExtraActions.length) {
+    <div class="flex flex-row items-center justify-end gap-sm">
+      @for (action of viewExtraActions; track action) {
+        @if (action.type === 'button') {
+          <button
+            type="button"
+            mat-flat-button
+            color="accent"
+            class="text-white"
+            [disabled]="action?.disabled()"
+            (click)="action?.execute()">
+            <mat-icon>{{ action.icon }}</mat-icon> {{ action.label }}
+          </button>
+        }
+        @if (action.type === 'text') {
+          <div class="flex gap-sub" [ngClass]="action.styles">
+            <mat-icon>{{ action.icon }}</mat-icon>
+            {{ action.text }}
+          </div>
+        }
+      }
+
+      <button
+        type="button"
+        mat-flat-button
+        color="accent"
+        class="text-white"
+        [routerLink]="['../']">
+        <mat-icon>arrow_back</mat-icon> Tornar al llistat
+      </button>
+    </div>
+  }
 </div>
 
 <plastik-shared-form-feature
-  class="block w-full lg:w-10/12 xxl:w-1/2"
+  class="block w-full"
+  [ngClass]="{ 'lg:w-10/12 xxl:w-1/2': !facade.formFullWidth?.() }"
   [fields]="facade.formStructure() || []"
   [model]="facade.model?.() || {}"
+  [submitConfig]="facade.formSubmitConfig?.()"
+  (temporaryChangeEvent)="onChange($event)"
   (changeEvent)="onSubmit($event)">
 </plastik-shared-form-feature>
