--- a/libs/shared/form/ui/year-picker/src/lib/shared-form-ui-year-picker/shared-form-ui-year-picker-type.component.html
+++ b/libs/shared/form/ui/year-picker/src/lib/shared-form-ui-year-picker/shared-form-ui-year-picker-type.component.html
@@ -1,7 +1,6 @@
 <plastik-shared-form-ui-year-picker
   [formControl]="formControl"
   [formlyAttributes]="field"
-  [touchUi]="to.touchUi || false"
-  [label]="to.label || ''"
->
+  [touchUi]="props.touchUi || false"
+  [label]="props.label || ''">
 </plastik-shared-form-ui-year-picker>
