feat(llecoop/order/list): #391 add user order list view
ISSUES CLOSED: #391

--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -32,6 +32,7 @@
       mat-flat-button
       color="accent"
       class="text-white"
+      [disabled]="routingToDetailPage.disabled"
       [routerLink]="routingToDetailPage.path || ['./crear']">
       <mat-icon>add</mat-icon> {{ routingToDetailPage.label || 'Crear' }}
     </button>
