--- a/apps/llecoop/src/styles/_theme.scss
+++ b/apps/llecoop/src/styles/_theme.scss
@@ -23,9 +23,12 @@
     --primary-200: #{mat.m2-get-color-from-palette(palette.$md-primary, 200)};
     --primary-700: #{mat.m2-get-color-from-palette(palette.$md-primary, 700)};
     --primary-500: #{mat.m2-get-color-from-palette(palette.$md-primary, 500)};
+    --primary-900: #{mat.m2-get-color-from-palette(palette.$md-primary, 900)};
+    --accent-50: #{mat.m2-get-color-from-palette(palette.$md-accent, 50)};
     --accent-100: #{mat.m2-get-color-from-palette(palette.$md-accent, 100)};
     --accent-400: #{mat.m2-get-color-from-palette(palette.$md-accent, 400)};
     --accent-700: #{mat.m2-get-color-from-palette(palette.$md-accent, 700)};
+    --accent-900: #{mat.m2-get-color-from-palette(palette.$md-accent, 900)};
     --warn-50: #{mat.m2-get-color-from-palette(palette.$md-warn, 50)};
     --warn-100: #{mat.m2-get-color-from-palette(palette.$md-warn, 100)};
     --warn: #{mat.m2-get-color-from-palette(palette.$md-warn, 500)};
@@ -35,10 +38,14 @@
     /* Tailwind Colors */
     --primary: var(--primary-500);
     --primary-light: var(--primary-100);
+    --primary-lighter: var(--primary-50);
     --primary-dark: var(--primary-700);
+    --primary-darker: var(--primary-900);
     --secondary: var(--accent-400);
     --secondary-light: var(--accent-100);
     --secondary-dark: var(--accent-700);
+    --secondary-lighter: var(--accent-50);
+    --secondary-darker: var(--accent-900);
 
     --white: #ffffff;
     --black: #000000;
