--- a/apps/llecoop/src/styles/styles.scss
+++ b/apps/llecoop/src/styles/styles.scss
@@ -70,4 +70,39 @@
       @apply underline underline-offset-2;
     }
   }
+
+  plastik-shared-activity-ui-overlay .overlay-container {
+    z-index: 9999;
+  }
+
+  plastik-core-cms-layout-feature {
+    .core-cms-container {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 55px 1fr 55px;
+      min-block-size: 100vh;
+      min-block-size: 100dvh;
+
+      grid-template-areas: 'header header' 'content content' 'footer footer';
+
+      plastik-core-cms-layout-ui-header {
+        grid-area: header;
+      }
+
+      plastik-core-cms-layout-ui-sidenav {
+        grid-area: content;
+
+        .mat-sidenav-container {
+          .mat-sidenav-content {
+            height: calc(100vh - 110px);
+          }
+        }
+      }
+
+      plastik-core-cms-layout-ui-footer {
+        grid-area: footer;
+        align-content: end;
+      }
+    }
+  }
 }
