--- a/libs/core/cms-layout/ui/sidenav/src/lib/core-cms-layout-ui-sidenav/core-cms-layout-ui-sidenav.component.html
+++ b/libs/core/cms-layout/ui/sidenav/src/lib/core-cms-layout-ui-sidenav/core-cms-layout-ui-sidenav.component.html
@@ -17,7 +17,7 @@
     role="main"
     tabindex="-1"
     id="mainContent"
-    class="bg-white p-md h-[calc(100vh-95px)] motion-safe:scroll-smooth">
+    class="bg-white p-md motion-safe:scroll-smooth">
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
