--- a/libs/shared/form/ui/year-picker/src/lib/year-picker-type.component.html
+++ b/libs/shared/form/ui/year-picker/src/lib/year-picker-type.component.html
@@ -1,6 +1,6 @@
-<plastik-shared-form-ui-year-picker
+<plastik-year-picker
   [formControl]="formControl"
   [formlyAttributes]="field"
   [touchUi]="props.touchUi || false"
   [label]="props.label || ''">
-</plastik-shared-form-ui-year-picker>
+</plastik-year-picker>
