feat(llecoop): #416 add filtering for products
also refine filtering for categories and orders

ISSUES CLOSED: #416 #417

--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -56,6 +56,7 @@
   [pageSizeOptions]="tableStructure.pageSizeOptions || []"
   [paginationVisibility]="tableStructure.paginationVisibility"
   [filterCriteria]="filterCriteria()"
+  [filterPredicate]="facade.tableFilterPredicate"
   [actions]="tableStructure.actions || {}"
   [extraRowStyles]="tableStructure.extraRowStyles"
   (changeSorting)="onChangeSorting($event)"
