--- a/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility-type.component.html
+++ b/libs/shared/form/ui/input-password-with-visibility/src/lib/input-password-with-visibility-type.component.html
@@ -6,8 +6,7 @@
   [required]="props.required || false"
   [maxLength]="props.maxLength"
   [minLength]="props.minLength"
-  [autocomplete]="to['autocomplete']"
-/>
+  [autocomplete]="to['autocomplete']" />
 <button
   mat-icon-button
   tabindex="-1"
@@ -16,7 +15,6 @@
   class="absolute top-0 right-0"
   [attr.aria-label]="!hiddenPass() ? 'Hide password' : 'Show password'"
   [attr.aria-pressed]="hiddenPass()"
-  (click)="hidePassword($event)"
->
+  (click)="hidePassword($event)">
   <mat-icon>{{ hiddenPass() ? 'visibility_off' : 'visibility' }}</mat-icon>
 </button>
